--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GYM WeBSITE</title>
+    <title>GYM WEBSITE</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen and (max-width: 1200px)" href="phone.css">
@@ -29,7 +29,7 @@
             <p>Time ultimate atom</p>
             <a href="#section">HOME</a>
             <a href="#section2">  ABOUT US  </a>
-            <a href="#section3">  PRODUCTS </a>
+            <a href="#section3">  JOIN NOW </a>
             <a href="#section4">FEEDBACK</a>
         </div>
         <hr>
